styles.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

:root {
    --bg-color: #ffffff;
    --body-color: #f3f3f3;
    --blue-text: #343c6a;
    --font-poppins: "Poppins", sans-serif;
    --gray-text: #b1b1b1;
    --description-text: #718EBF;
    --hover-blue: #2D60FF;


    --filter-search-blue: brightness(0) saturate(100%) invert(56%) sepia(16%) saturate(871%) hue-rotate(179deg) brightness(95%) contrast(97%);
    --filter-hover-blue: brightness(0) saturate(100%) invert(26%) sepia(78%) saturate(2865%) hue-rotate(222deg) brightness(101%) contrast(102%);
}

*, *::before, *::after {
    box-sizing: border-box;
}
* {
    margin: 0;
    color: var(--blue-text);
    font-family: "Inter", sans-serif;
}
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
}
input, button, textarea, select {
    font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
}
 



body {
    display: grid;
    column-gap: 2px;
    grid-template: auto 1fr / 14rem 1fr;
    height: 100vh;
    background-color: var(--body-color);
    overflow: hidden;
}

@media (width <= 850px) {
    body {
        grid-template-columns: 4rem 1fr;
    }
}



nav {
    background-color: var(--bg-color);
    grid-row: 1 / 3;
    grid-column: 1 / 2;
    
    height: 100vh;

}

#logo {
    display: grid;
    place-items: center;
    height: 4rem;

}

#logo div {
    display: flex;
    flex-direction: row;
    align-items: center;
}

#logo h3 {
    font-weight: 900;
    font-style: var(--font-poppins);
    font-size: 1.8rem;
}

nav > div:last-of-type {
    height: calc(100vh - 4rem);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 1rem 0;
}

nav ul li {
    display: flex;
    align-items: center;
    width: 100%;
    margin-bottom: 1.2rem;
    font-weight: 500;
    cursor: pointer;
}

nav ul li div {
    align-self: flex-start;
    height: 2rem;
    width: 6px;
    background-color: #2D60FF;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    visibility: hidden;
}

nav ul li:hover div {
    visibility: visible;
}

nav ul li:hover p {
    color: var(--hover-blue);
}

nav ul li:hover img {
    filter: var(--filter-hover-blue);
}



nav ul li img {
    margin-left: 2rem ;
    margin-right: 1.4rem;
}

nav ul li p {
    color: var(--gray-text)
}

ul {
    list-style: none;
    padding: 0;
    width: 100%;
}





header {
    background-color: var(--bg-color);
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    padding: 0.6rem 1rem;
    display: grid;
    grid-template-columns: 1fr 32rem;
    align-items: center;
    height: 4rem;
}

header h1 {
    font-size: 1.4rem;
    font-weight: 900;
}

header > div {
    display: flex;
    justify-content: space-evenly;
}

header > div div:first-of-type{
    width: auto;
    background-color: var(--body-color);
    display: flex;
    border-radius: 2.2rem;
    align-items: center;
    
}


header > div > div {
    height: 2rem;
    width: 2rem;
    border-radius: 50%;
    background-color: var(--body-color);
    display: grid;
    place-items: center;
    overflow: hidden;

}

input {
    height: 2.2rem;
    width: 16rem;
    background-color: var(--body-color);
    font-weight: 400;
    font-size: 0.8rem;
    border-radius: 2.2rem;
    border: none;
}

img[src='./src/display-iamge.png'] {
    width: 3rem;
    height: auto;
    
}


img[src='./src/search-icon.svg'] {
    height: 1.2rem;
    width: auto;
    margin: 0 0.8rem;
}


input:focus {
    outline: none;
     
}

.icon {
    width: 1.4rem;
    height: auto;
}




main {
    grid-row: 2 / 3;
    grid-column: 2 / 3;

    display: grid;
    grid-template-columns: 1fr 16rem;
    padding: 0.8rem 1.5rem;
    overflow-y: scroll;
    overflow-x: none;
    scrollbar-width: none;
  
} 

main > section {
    display: grid;
    grid-template-rows: 3rem 1fr;


}

#projects {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: 350px;
    gap: 1.2rem;
    padding-right: 1.5rem;

    

    > div {
        background-color: var(--bg-color);
        border-radius: 1.5rem;
        padding: 1.5rem;
        display: grid;
        place-items: center;
        border-style: inset;
        border: none;
        border-bottom: 1.5rem solid var(--gray-text);
        cursor: pointer;
        
    
        > div {
            width: 90%;
            height: 100%;
            max-width: 30rem;
            margin: 0 auto;
            display: flex; 
            flex-direction: column;
            justify-content: space-around;
            

            > p {
                font-size: 1.2rem;
                font-weight: 700;
                color: var(--gray-text);
            }

            .screenshot {
                width: 100%;
                height: auto;
                margin: 0.3rem auto;
                border-radius: 1rem;
                box-shadow: 4px 4px 0px 0px rgba(0,0,0,0.25);
                
                
            }

            .redirect-buttons {
                display: flex;
                justify-content: flex-end;

                > a {

                    img:last-of-type {
                        margin-left: 1rem;
                    }
                }
            }
        }
    }

} 

#projects > div:hover {
    border-bottom: 1.5rem solid var(--hover-blue);
}

#projects > div:hover p {
    color: var(--hover-blue);
}

#projects > div:hover .redirect-buttons img{
    filter: var(--filter-hover-blue);
}


.disable {
    cursor: not-allowed;
    pointer-events: none;
}

.disable .screenshot {
    filter: grayscale(1);
}




aside {
    position: sticky;
    grid-column: 2/3;
    top: 0;
    left: 0;
    align-self: start;
    row-gap: 0.5rem;
    display: grid;
    grid-template-rows: auto auto 1fr;



}



#about-me {
    /* background-color: rgb(214, 255, 214); */
    
    > p {
        font-size: 1rem;
        font-weight: 700; 
    }

    > div {
        background-color: var(--bg-color);
        border-radius: 1.5rem;
        padding: 1.2rem;
        /* height: 12rem; */
        
        overflow: hidden;

        p:first-of-type {
            font-weight: 600;
        }

        div {
            width: 100%;
            height: 0.1rem;
            background-color: var(--blue-text);
            margin: 0.25rem 0;
        }

        p:last-of-type {
            color: var(--gray-text);
            font-size: 0.8rem;
            line-height: 0.9rem;
            cursor: pointer;
        }

        p:last-of-type:hover {
            color: var(--blue-text);
            text-decoration: underline;
        }

        
    }

}

#front-end-stacks {
    > p {
        font-size: 1rem;
        font-weight: 700; 
    }

    > div {
        background-color: var(--bg-color);
        border-radius: 1.5rem;
        padding: 1.2rem;
        /* overflow: hidden; */
        display: grid;
        grid-template-rows: repeat(3, 1fr);
        row-gap: 0.8rem;
        

        >div {
            display: grid;
            grid-template-columns: 2.5rem 1fr;
            column-gap: 0.8rem;
            cursor: pointer;

            > img {
                height: 2.4rem;
                width: auto;
                justify-self: center;
                transition: transform 250ms;
                
            }


            
            > div {
                height: 2.5rem;
                white-space: nowrap;
                overflow: hidden;
                text-overflow: ellipsis;
                width: 100%;


                

                h6 {
    
                   
                    font-weight: 700;
                    font-size: 1rem;
                    color: var(--blue-text);
                }

                p {
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    font-size: 0.6rem;
                    color: var(--description-text);
                }

      
            }

            
        }

        > div:hover p {
            text-decoration: underline;
        }

        >div:hover img {
            transform: scale(1.05);
        }

    }
}

.developer {
    background: linear-gradient(90deg, rgba(28,187,255,1) 0%, rgba(79,243,254,1) 100%);
    cursor: pointer;
    transition: transform 300ms;
    border-radius: 1.5rem;
    overflow: hidden;
    padding: 1.5rem;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: calc(100vh - 33.5rem);
    max-height: 26rem;
    min-height: 208px;

    > img:first-of-type {
        height: auto;
        width: 1rem;
    }

    > img:last-of-type {
        height: auto;
        width: 2rem;
    }

    h2 {
        line-height: 0.8;
        font-size: 2.2rem;
        color: white;
    }

    .hire-me {
        color: #edff7b;
        
    }
}

.developer:hover {
    background: linear-gradient(0deg, rgba(28,187,255,1) 0%, rgba(79,243,254,1) 100%);
    transform: scale(1.01);
}

/* 
@media (width <= 1045px) {
    main {
        grid-template-columns: 1fr;
        grid-template-rows: auto auto;
    }
    aside {
        grid-template-rows: auto;
        grid-template-columns: repeat(3, 1fr);
        align-self: end;
        position: static;
        grid-column: 1 / 2;
    }
} */

